idf_component_register(SRCS "utils_base64.c"
                    INCLUDE_DIRS ".")
idf_component_register(SRCS "utils_hmac.c"
                    INCLUDE_DIRS ".")
idf_component_register(SRCS "utils_md5.c"
                    INCLUDE_DIRS ".")
idf_component_register(SRCS "utils_sha1.c"
                    INCLUDE_DIRS ".")
idf_component_register(SRCS "utils_3Y.c"
                    INCLUDE_DIRS ".")
idf_component_register(SRCS "HAL_Platform.c"
                    INCLUDE_DIRS ".")
                    HAL_Platform   